--- a/client/src/components/List/List.css
+++ b/client/src/components/List/List.css
@@ -1,9 +1,6 @@
-.list-overflow-container {
-  max-height: 545px;
-  border: 1px #DDDDDD solid;
-  border-radius: 4px;
-  overflow-y: scroll;
-  overflow-x: hidden;
+.badge-pill {
+  float: right;
+ 
 }
 
 .list-overflow-container ul {
