--- a/client/src/components/Auth/Auth.css
+++ b/client/src/components/Auth/Auth.css
@@ -1,9 +1,44 @@
-@font-face {
-	font-family: 'Special Elite';
-	weight: 400;
-	src: url('https://fonts.googleapis.com/css?family=Special+Elite');
+body {
+	background-image: url(./grey_wash_wall_@2X.png);
+	opacity: 0.8;
+}
+
+text {
+	font-family: "Lucida Sans Typewriter", "Lucida Console", monaco, "Bitstream Vera Sans Mono", monospace;
+}
+
+#wrapper {
+	margin-top: 60px;
+}
+
+.btn {
+	background-color: rgba(0, 0, 0, 0);
+	border-color: rgba(0, 0, 0, 0);
+	font-family: "Lucida Sans Typewriter", "Lucida Console", monaco, "Bitstream Vera Sans Mono", monospace;
+	margin: 5px;
+	margin-left: auto;
+	margin-right: auto;
+	color: black;
+	font-size: 20px;
+	opacity: 1.0;
+}
+
+.btn:hover {
+	background-color: #2161a6;
 }
 
 #email {
-	font-family: 'Special Elite';
+	margin: 10px auto;
+	margin-right: auto;
+	margin-left: auto;
+	font-family: "Lucida Sans Typewriter", "Lucida Console", monaco, "Bitstream Vera Sans Mono", monospace;
+	font-size: 20px;
+	opacity: 0.7;
+}
+
+#password {
+	margin: 10px auto;
+	font-family: "Lucida Sans Typewriter", "Lucida Console", monaco, "Bitstream Vera Sans Mono", monospace;
+	font-size: 20px;
+	opacity: 0.7;
 }
